gitops/apps/vllm/embeddings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: embeddings-api
  namespace: vllm
spec:
  selector:
    app: vllm-embeddings
  ports:
    - port: 8000
      targetPort: http
      name: http
